# garmin-nof1

./: .gitignore  CLAUDE.md  README.md  environment.yml  pyproject.toml
.github/workflows/: tests.yml
data/derived/: .gitkeep
data/interim/: .gitkeep
data/raw/: .gitkeep
docs/: 项目简介.md
examples/: demo_cv_leakage.py
preregistration/: OSF_preregistration.md
scripts/: check_panel.py  dlayer_report.py  make_figures.py  prediction_report.py  pull_garmin.py
src/garmin_nof1/: __init__.py
src/garmin_nof1/data/: __init__.py  synthetic.py
src/garmin_nof1/eval/: __init__.py  agreement.py  cv.py
src/garmin_nof1/models/: __init__.py  _common.py  prediction.py  recovery_cost.py  recovery_tau.py
src/garmin_nof1/pipeline/: __init__.py  build_panel.py  garmin_schema.py  garth_cn.py  ingest_garmin.py  parse_rr.py  trimp.py
tests/: test_agreement.py  test_build_panel.py  test_cv.py  test_garmin_schema.py  test_garth_cn.py  test_ingest_garmin.py  test_parse_rr.py  test_prediction.py  test_recovery_cost.py  test_recovery_strength.py  test_recovery_tau.py  test_synthetic.py  test_trimp.py
