[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "garmin-nof1"
version = "0.1.0"
description = "A single-subject (N-of-1) study of cross-sport recovery using ~2 years of Garmin triathlon + soccer data."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ewan Wu" }]
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "scikit-learn",
  "statsmodels",
]

[project.optional-dependencies]
ingest = ["fitparse", "garminconnect", "curl_cffi"]
modeling = ["pymc", "arviz"]
coupling = ["tigramite"]
dev = ["pytest", "pytest-cov", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
